# digipay

backend/: .env.example  PYTHON_INTEGRATION.md  README.md  digipay_client.py  package-lock.json  package.json
backend/scripts/: createAdmin.js
backend/src/: app.js
backend/src/config/: changeStream.js  database.js
backend/src/controllers/: adminController.js  apiKeyController.js  authController.js  kycController.js  paymentController.js  rateController.js  settlementController.js  webhookController.js
backend/src/middlewares/: adminAuth.js  apiKeyAuth.js  auth.js  errorHandler.js  mixedAuth.js  upload.js
backend/src/models/: ApiKey.js  CommissionTier.js  KYC.js  Merchant.js  Settlement.js  Transaction.js  User.js  Webhook.js
backend/src/routes/: adminRoutes.js  apiKeyRoutes.js  authRoutes.js  kycRoutes.js  paymentRoutes.js  rateRoutes.js  settlementRoutes.js  webhookRoutes.js
backend/src/services/: authService.js  commissionCalculator.js  paymentService.js  settlementService.js  webhookService.js
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DashboardLayout.jsx
frontend/src/pages/: AdminMerchantDetails.jsx  AdminMerchants.jsx  AdminRates.jsx  ApiKeys.jsx  Dashboard.jsx  Documentation.jsx  (+8 more)
sdk/nodejs/: .npmignore  README.md  package-lock.json  package.json
sdk/python/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
sdk/python/digipay_sdk/: __init__.py  client.py  exceptions.py
sdk/python/examples/: basic_usage.py
(+12 files in other folders)
