[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digipay-python"
version = "1.0.0"
description = "Official DigiPay SDK for Python - Accept mobile money payments with ease"
readme = "README.md"
authors = [
    {name = "DigiPay", email = "support@digipay.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["digipay", "payment", "mobile-money", "mtn", "orange", "cameroon", "africa"]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/digipay/digipay-python"
Documentation = "https://docs.digipay.com"
Repository = "https://github.com/digipay/digipay-python"
"Bug Tracker" = "https://github.com/digipay/digipay-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
